# Ceres

./: .gitignore  CMakeLists.txt  default.clang-format
Ceres/: main.cpp
Content/Shaders/: default.GLSL  default.frag.glsl  default.vert.glsl  defaultFragment.GLSL  defaultVertex.GLSL  font.frag.glsl  font.vert.glsl  shadowmap.vert.glsl  skybox.vert.glsl  skyboxFragment.GLSL  skyboxVertex.GLSL  sprite.frag.glsl  sprite.vert.glsl  textured.frag.glsl  textured.vert.glsl  texturedFragment.GLSL  texturedVertex.GLSL  wireframe.frag.glsl  wireframe.vert.glsl
cmake/: custom-utils.cmake
src/Ceres/: Game.cpp  Game.h  main.cpp
src/Ceres/Core/: GraphicsDevice.cpp  GraphicsDevice.h  MainHandler.cpp  MainHandler.h  Program.cpp  Program.h  Vector3.h
src/Ceres/Core/Common/: AssetPointer.h  Color.h  Math.h  Matrix.cpp  Matrix.h  Matrix2D.cpp  Matrix2D.h  Transform.cpp  Transform.h  Types.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  VertexList.cpp  VertexList.h
src/Ceres/Core/Components/: CameraComponent.cpp  CameraComponent.h  ComponentRef.cpp  ComponentRef.h  ControllerComponent.cpp  ControllerComponent.h  IComponent.cpp  IComponent.h  MeshComponent.cpp  MeshComponent.h  Message.cpp  Message.h  MovementComponent.cpp  MovementComponent.h  PhysicsComponent.cpp  PhysicsComponent.h  RenderComponent.cpp  RenderComponent.h  SpriteComponent.cpp  SpriteComponent.h  TextComponent.cpp  TextComponent.h
src/Ceres/Core/Components/Base/: ComponentList.cpp  ComponentList.h  ComponentParameters.cpp  ComponentParameters.h  ComponentPtr.cpp  ComponentPtr.h  ComponentRef.cpp  ComponentRef.h  IComponent.cpp  IComponent.h  Message.cpp  Message.h
src/Ceres/Core/Components/Base/MessageSystem/: Message.cpp  MessageHandlerMap.h  MessageSystem.cpp  MessageSystem.h
src/Ceres/Core/Entities/: Actor.cpp  Actor.h  Block.cpp  Block.h  IEntity.cpp  IEntity.h
src/Ceres/Core/Entities/Base/: IEntity.cpp  IEntity.h
src/Ceres/Core/Graphics/: Context.cpp  Context.h  CubeMap.cpp  CubeMap.h  Effect.cpp  Effect.h  FontBatcher.cpp  FontBatcher.h  GraphicsDevice.cpp  GraphicsDevice.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Plane.cpp  Plane.h  Shadowmap.cpp  Shadowmap.h  Skybox.cpp  Skybox.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  VertexArrayObject.cpp  VertexArrayObject.h  VertexBufferObject.cpp  VertexBufferObject.h  VertexCollection.cpp  VertexCollection.h  VertexStream.cpp  VertexStream.h  Window.cpp  Window.h
src/Ceres/Core/Graphics/Primitives/: Cube.cpp  Cube.h  MeshPrimitive.cpp  MeshPrimitive.h  Sphere.cpp  Sphere.h
src/Ceres/Core/Graphics/VertexTypes/: IVertexLayout.cpp  IVertexLayout.h  IVertexType.cpp  IVertexType.h  VertexPosition.cpp  VertexPosition.h  VertexPositionLayout.cpp  VertexPositionLayout.h  VertexPositionNormal.cpp  VertexPositionNormal.h  VertexPositionNormalColor.h  VertexPositionNormalColorLayout.cpp  VertexPositionNormalColorLayout.h  VertexPositionNormalLayout.cpp  VertexPositionNormalLayout.h  VertexPositionNormalTexture.h  VertexPositionNormalTextureLayout.cpp  VertexPositionNormalTextureLayout.h  VertexPositionTexture.h  VertexPositionTextureLayout.cpp  VertexPositionTextureLayout.h
src/Ceres/Core/IO/: ContentManager.cpp  ContentManager.h
src/Ceres/Core/IO/FontLoading/: FontAtlas.cpp  FontAtlas.h  GlyphSubtexture.h
src/Ceres/Core/Input/: Axis.cpp  Axis.h  Axis2D.cpp  Axis2D.h  Buttons.cpp  Buttons.h  InputHandler.cpp  InputHandler.h  Joystick.cpp  Joystick.h
src/Ceres/Core/Math/: Bitwise.h
src/Ceres/Core/Memory/: Align.cpp  Align.h  FirstFreeAllocator.cpp  FirstFreeAllocator.h  GenericAllocator.cpp  GenericAllocator.h  PoolAllocator.cpp  PoolAllocator.h  StackAllocator.cpp  StackAllocator.h
src/Ceres/Core/Physics/: ConvexHull.cpp  ConvexHull.h  IPrimitive.cpp  IPrimitive.h  PhysicsUtilities.cpp  PhysicsUtilities.h  SweepResult.cpp  SweepResult.h
src/Ceres/Core/Physics/GJK/: GJK.cpp  GJK.h  Simplex.cpp  Simplex.h
src/Ceres/Core/Physics/Primitives/: CapsulePrimitive.cpp  CapsulePrimitive.h  CubePrimitive.cpp  CubePrimitive.h  SpherePrimitive.cpp  SpherePrimitive.h
src/Ceres/Core/Services/: ActorService.cpp  ActorService.h  IService.cpp  IService.h  InputService.cpp  InputService.h  PhysicsService.cpp  PhysicsService.h  RenderService.cpp  RenderService.h  ServiceContainer.cpp  ServiceContainer.h
src/Ceres/Core/World/: World.cpp  World.h
